--- a/app/src/main/res/values/size.xml
+++ b/app/src/main/res/values/size.xml
@@ -1,2 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <dimen name="second">14sp</dimen>
+    <dimen name="padding_left">16dp</dimen>
+    <dimen name="padding_right">16dp</dimen>
+    <dimen name="text_width">90dp</dimen>
+    <dimen name="text_size">20sp</dimen>
+    <dimen name="text_size_small">20sp</dimen>
+    <dimen name="image_size">60dp</dimen>
+    <dimen name="madding_right">12dp</dimen>
+    <dimen name="madding_left">50dp</dimen>
+    <dimen name="madding_top">120dp</dimen>
+    <dimen name="madding_top_second">12dp</dimen>
+    <dimen name="text_title_madding_left">6dp</dimen>
+
+</resources>
