--- a/app/src/main/res/layout/forcast_item_view.xml
+++ b/app/src/main/res/layout/forcast_item_view.xml
@@ -1,6 +1,192 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingLeft="20dp"
+        android:paddingTop="100dp">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layoutDirection="ltr">
+
+            <TextView
+                android:id="@+id/now_tmp"
+                android:layout_width="@dimen/text_width"
+                android:layout_height="wrap_content"
+                android:background="@color/colorBeijing"
+                android:paddingStart="@dimen/padding_left"
+                android:paddingLeft="@dimen/padding_right"
+                android:paddingEnd="@dimen/padding_right"
+                android:paddingRight="@dimen/padding_right"
+                android:text="温度"
+                android:textColor="@color/colorFirst"
+                android:textSize="@dimen/second" />
+
+            <TextView
+                android:id="@+id/now_tmp_value"
+                android:layout_width="@dimen/text_width"
+                android:layout_height="wrap_content"
+                android:background="@color/colorBeijing"
+                android:paddingStart="@dimen/padding_left"
+                android:paddingLeft="@dimen/padding_right"
+                android:paddingEnd="@dimen/padding_right"
+                android:paddingRight="@dimen/padding_right"
+                android:text="温度"
+                android:textColor="@color/colorFirst"
+                android:textSize="@dimen/second" />
+
+            <TextView
+                android:id="@+id/now_fl"
+                android:layout_width="@dimen/text_width"
+                android:layout_height="wrap_content"
+                android:background="@color/colorBeijing"
+                android:paddingStart="@dimen/padding_left"
+                android:paddingLeft="@dimen/padding_right"
+                android:paddingEnd="@dimen/padding_right"
+                android:paddingRight="@dimen/padding_right"
+                android:text="体感温度"
+                android:textColor="@color/colorFirst"
+                android:textSize="@dimen/second" />
+
+            <TextView
+                android:id="@+id/now_fl_value"
+                android:layout_width="@dimen/text_width"
+                android:layout_height="wrap_content"
+                android:background="@color/colorBeijing"
+                android:paddingStart="@dimen/padding_left"
+                android:paddingLeft="@dimen/padding_right"
+                android:paddingEnd="@dimen/padding_right"
+                android:paddingRight="@dimen/padding_right"
+                android:text="体感温度"
+                android:textColor="@color/colorFirst"
+                android:textSize="@dimen/second" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layoutDirection="ltr">
+
+            <TextView
+                android:id="@+id/now_wind_dir"
+                android:layout_width="@dimen/text_width"
+                android:layout_height="wrap_content"
+                android:background="@color/colorBeijing"
+                android:paddingStart="@dimen/padding_left"
+                android:paddingLeft="@dimen/padding_right"
+                android:paddingEnd="@dimen/padding_right"
+                android:paddingRight="@dimen/padding_right"
+                android:text="风力"
+                android:textColor="@color/colorFirst"
+                android:textSize="@dimen/second" />
+
+            <TextView
+                android:id="@+id/now_wind_dir_value"
+                android:layout_width="@dimen/text_width"
+                android:layout_height="wrap_content"
+                android:background="@color/colorBeijing"
+                android:paddingStart="@dimen/padding_left"
+                android:paddingLeft="@dimen/padding_right"
+                android:paddingEnd="@dimen/padding_right"
+                android:paddingRight="@dimen/padding_right"
+                android:text="风力"
+                android:textColor="@color/colorFirst"
+                android:textSize="@dimen/second" />
+
+            <TextView
+                android:id="@+id/now_pres"
+                android:layout_width="@dimen/text_width"
+                android:layout_height="wrap_content"
+                android:background="@color/colorBeijing"
+                android:paddingStart="@dimen/padding_left"
+                android:paddingLeft="@dimen/padding_right"
+                android:paddingEnd="@dimen/padding_right"
+                android:paddingRight="@dimen/padding_right"
+                android:text="压强"
+                android:textColor="@color/colorFirst"
+                android:textSize="@dimen/second" />
+
+            <TextView
+                android:id="@+id/now_pres_value"
+                android:layout_width="@dimen/text_width"
+                android:layout_height="wrap_content"
+                android:background="@color/colorBeijing"
+                android:paddingStart="@dimen/padding_left"
+                android:paddingLeft="@dimen/padding_right"
+                android:paddingEnd="@dimen/padding_right"
+                android:paddingRight="@dimen/padding_right"
+                android:text="压强"
+                android:textColor="@color/colorFirst"
+                android:textSize="@dimen/second" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layoutDirection="ltr">
+
+            <TextView
+                android:id="@+id/now_pcpn"
+                android:layout_width="@dimen/text_width"
+                android:layout_height="wrap_content"
+                android:background="@color/colorBeijing"
+                android:paddingStart="@dimen/padding_left"
+                android:paddingLeft="@dimen/padding_right"
+                android:paddingEnd="@dimen/padding_right"
+                android:paddingRight="@dimen/padding_right"
+                android:text="降水量"
+                android:textColor="@color/colorFirst"
+                android:textSize="@dimen/second" />
+
+            <TextView
+                android:id="@+id/now_pcpn_value"
+                android:layout_width="@dimen/text_width"
+                android:layout_height="wrap_content"
+                android:background="@color/colorBeijing"
+                android:paddingStart="@dimen/padding_left"
+                android:paddingLeft="@dimen/padding_right"
+                android:paddingEnd="@dimen/padding_right"
+                android:paddingRight="@dimen/padding_right"
+                android:text="降水量"
+                android:textColor="@color/colorFirst"
+                android:textSize="@dimen/second" />
+
+            <TextView
+                android:id="@+id/now_vis"
+                android:layout_width="@dimen/text_width"
+                android:layout_height="wrap_content"
+                android:background="@color/colorBeijing"
+                android:paddingStart="@dimen/padding_left"
+                android:paddingLeft="@dimen/padding_right"
+                android:paddingEnd="@dimen/padding_right"
+                android:paddingRight="@dimen/padding_right"
+                android:text="能见度"
+                android:textColor="@color/colorFirst"
+                android:textSize="@dimen/second" />
+
+            <TextView
+                android:id="@+id/now_vis_value"
+                android:layout_width="@dimen/text_width"
+                android:layout_height="wrap_content"
+                android:background="@color/colorBeijing"
+                android:paddingStart="@dimen/padding_left"
+                android:paddingLeft="@dimen/padding_right"
+                android:paddingEnd="@dimen/padding_right"
+                android:paddingRight="@dimen/padding_right"
+                android:text="能见度"
+                android:textColor="@color/colorFirst"
+                android:textSize="@dimen/second" />
+
+        </LinearLayout>
+
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+</layout>
