--- a/app/src/main/res/layout/fragment_screen_slide.xml
+++ b/app/src/main/res/layout/fragment_screen_slide.xml
@@ -90,8 +90,7 @@
                 android:id="@+id/recipe_list_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="100dp"
-                >
+                android:layout_marginTop="100dp">
             </androidx.recyclerview.widget.RecyclerView>
 
 
