--- a/app/src/main/res/layout/activity_discover.xml
+++ b/app/src/main/res/layout/activity_discover.xml
@@ -9,11 +9,11 @@
     tools:context=".view.activity.DiscoverActivity">
 
 
-    <com.google.android.ads.nativetemplates.TemplateView
-        android:id="@+id/my_template"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:gnt_template_type="@layout/gnt_medium_template_view"></com.google.android.ads.nativetemplates.TemplateView>
+<!--    <com.google.android.ads.nativetemplates.TemplateView-->
+<!--        android:id="@+id/my_template"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:gnt_template_type="@layout/gnt_medium_template_view"></com.google.android.ads.nativetemplates.TemplateView>-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/discover_recycle_view"
