--- a/app/src/main/res/values/size.xml
+++ b/app/src/main/res/values/size.xml
@@ -5,6 +5,7 @@
     <dimen name="padding_right">16dp</dimen>
     <dimen name="text_width">90dp</dimen>
     <dimen name="text_size">20sp</dimen>
+    <dimen name="text_size_smaller">10sp</dimen>
     <dimen name="text_size_small">20sp</dimen>
     <dimen name="image_size">60dp</dimen>
     <dimen name="madding_right">12dp</dimen>
