--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,37 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="@color/colorBeijing"
     tools:context=".view.activity.DetailActivity">
 
-    <data>
-
-        <variable
-            name="now"
-            type="com.xixiaohui.weather.data.Now" />
-    </data>
-    <LinearLayout
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/my_tablayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        app:tabBackground="@color/colorBeijing"
+        app:tabIndicatorColor="@color/colorSelect"
+        app:tabIndicatorHeight="2dp"
+        app:tabSelectedTextColor="@color/colorSelect"
+        app:tabTextColor="@color/colorFirst"></com.google.android.material.tabs.TabLayout>
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/my_tablayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabTextColor="@color/colorFirst"
-            app:tabIndicatorColor="@color/colorSelect"
-            app:tabSelectedTextColor="@color/colorSelect"
-            app:tabBackground="@color/colorBeijing"
-            app:tabIndicatorHeight="2dp"
-            >
-        </com.google.android.material.tabs.TabLayout>
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/view_pager"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_marginTop="@dimen/table_margin_top"
 
-
-</layout>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+</LinearLayout>
